charger and echo